# receipt-parser

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PIPELINE_IMPROVEMENTS.md  PRODUCTION_PIPELINE_BASELINE.md  README.md  accuracy-audit-log.md  benchmark_plan.md  llm_speed_opt.md  pipeline_brittleness_audit.md  pyproject.toml  tmp.py
.codex/: config.toml
.codex/hooks/: debug_receipt_compact_checkpoint.ps1
.github/workflows/: ci.yml
docs/: PLAN.md  benchmark_plan.md  new_schema.md  tax_label_normalization.md
docs/repo-research/: 00_SUMMARY.md  01_paddleocr.md  02_sparrow.md  03_donut.md  04_yomitoku.md  05_hunyuan_ocr.md  06_deepseek_ocr.md  07_dots_ocr.md  08_receipt_ocr.md  09_unstructured.md  10_cord.md  11_ICDAR-2019-SROIE.md  12_WellApp-Well.md  13_Receipt_Scanner.md  14_receipt-parser-legacy.md  15_receiptparser.md  16_receipt_ocr_yoshiri.md  17_household_accounts.md  18_aireceipt_parser.md  19_ocr_receiptscanner.md  20_asprise_receipt_ocr.md  21_ReceiptScanner.md  22_OCR_TO_JSON.md  23_receipt_parsing.md  24_llm-based-invoice-ocr.md  25_receipt-scanner.md  potential_next_steps.md
receipt-parser/: README.md  TESTING_REPORT.md  batch_test_results.txt  benchmark_models.py  benchmark_results_final.json  benchmark_results_option_b.json  benchmark_results_option_c.json  benchmark_results_robust.json  benchmark_results_surgical.json  benchmark_robustness.py  cli.py  conftest.py  debug_visual.py  diag.py  extraction.py  normalization.py  ocr.py  pipeline.py  preprocessing.py  pyproject.toml  requirements.txt  robustness_results_v3.json  robustness_results_v3_fixes.json  robustness_results_v3_full.json  run_batched_tests.py  schema.py  smoke_test.py  validate_truth.py  validation.py
receipt-parser/robustness_debug/: receipt_29_run1.txt
scripts/: add_flagged_receipts.py  batch_test.py  benchmark_models.py  benchmark_robustness.py  diagnose.py  smoke_test.py  validate_truth.py
tests/: benchmark.py  conftest.py  test_accuracy.py  test_integration.py  test_pipeline_guardrails.py  test_unit.py  test_validation.py
(+172 files in other folders)
